--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@use-gesture/react": "^10.2.20",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-animated-css": "^1.2.1",
+    "react-animated-js": "^1.3.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-gesture-handler": "^0.0.5",
