sena events mobile responsive

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@use-gesture/react": "^10.2.20",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
-    "react-animated-css": "^1.2.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-gesture-handler": "^0.0.5",
     "react-particles": "^2.3.3",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
     "react-use-gesture": "^9.1.3",
