--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
-    "react-animated-css": "^1.2.1",
     "react-animated-js": "^1.3.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-gesture-handler": "^0.0.5",
     "react-particles": "^2.3.3",
-    "react-router-dom": "^6.0.0-beta.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
     "react-use-gesture": "^9.1.3",
