--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@use-gesture/react": "^10.2.20",
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.2",
     "isexe": "^2.0.0",
     "react": "^18.2.0",
