--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
     "react-spring": "^9.5.5",
     "react-use-gesture": "^9.1.3",
     "tsparticles": "^2.3.4",
