--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-animated-css": "^1.2.1",
     "react-animated-js": "^1.3.1",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-gesture-handler": "^0.0.5",
     "react-particles": "^2.3.3",
