--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-spinners": "^0.13.6",
     "react-spring": "^9.5.5",
     "react-use-gesture": "^9.1.3",
+    "simple-react-footer": "^1.0.2",
     "tsparticles": "^2.3.4",
     "tsparticles-slim": "^2.3.4",
     "web-vitals": "^2.1.4"
