--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@react-spring/web": "^9.5.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +22,7 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-gesture-handler": "^0.0.5",
     "react-particles": "^2.3.3",
     "react-reveal": "^1.2.2",
@@ -26,6 +32,7 @@
     "react-spring": "^9.5.5",
     "react-use-gesture": "^9.1.3",
     "simple-react-footer": "^1.0.2",
+    "styled-components": "^5.3.6",
     "tsparticles": "^2.3.4",
     "tsparticles-slim": "^2.3.4",
     "web-vitals": "^2.1.4"
